[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/superstar_memesbruh03_16px.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/LobbyScene.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ItemList" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.0
margin_top = -225.0
margin_right = 284.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 2 )
max_columns = 2
same_column_width = true
fixed_column_width = 270
icon_mode = 0

[node name="match" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -283.0
margin_top = -95.0
margin_right = 15.0
margin_bottom = -33.0
rect_pivot_offset = Vector2( -361, -301 )
custom_fonts/font = SubResource( 1 )
text = "JOIN ROOM"

[node name="exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 85.0
margin_top = -93.0
margin_right = 283.0
margin_bottom = -31.0
rect_pivot_offset = Vector2( -361, -301 )
custom_fonts/font = SubResource( 1 )
text = "EXIT"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="match" to="." method="_on_match_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
